# cocollama

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  search.html
.github/workflows/: deploy.yaml
api/: index.html
docs/: api.md  index.md  usage.md
search/: search_index.json
src/cocollama/: __init__.py  cli.py  cocollama.py
usage/: index.html
